--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Remove white outline around the website */
+html, body {
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
+
+* {
+	box-sizing: border-box;
+}
